<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Choose Your Own Adventure - with preferences</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start travelling</string>
    <string name="level_easy">Easy</string>
    <string name="level_normal">Normal</string>
    <string name="level_hard">Hard</string>
    <string name="start_adventure">Start an adventure,\n curious player!</string>
    <string name="alley_description">You have ventured down a dark alley. You can see a menacing fragmented cat looking you with unknown intentions.\nWhere would you like to go next?</string>
    <string name="go_left">Go left</string>
    <string name="continue_text">Continue</string>
    <string name="go_right">Go right</string>
    <string name="winning_title">You win!</string>
    <string name="losing_title">You lose!</string>
    <string name="title_activity_winning">Winner!</string>
    <string name="title_activity_losing">Loser!</string>
    <string name="room_description">You have entered a room with two fragmented doors. Strange noises come from both.</string>
    <string name="enter_door_1">Enter door no. 1</string>
    <string name="enter_door_2">Enter door no. 2</string>
    <string name="winning_text">Congratulations, %1$s, Brave Fighter! You\'ve reached the gold!</string>
    <string name="losing_text">Sorry, %1$s. You were a Brave Fighter, but you\'ve fallen into the pit of despair!</string>
    <string name="restart_game">Restart game</string>
    <string name="key_pref_username">KEY_PREF_USERNAME</string>
    <string name="user_name_title">User name</string>
    <string name="user_name_summary">Enter the user name</string>
    <string name="default_name">John Doe</string>
    <string name="title_activity_settings">Settings</string>

</resources>
